Fixing Untracked File

--- a/index.html
+++ b/index.html
@@ -1,19 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delicious: Eat Fresh, Eat Local!</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Delicious: Eat Fresh, Eat Local!</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
+
 <body>
-        <!-- Links to each page -->
-        <nav>
-            <ul>
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./blog.html">Blog</a></li>
-              <li><a href="./contact.html">Contact</a></li>
-            </ul>
-          </nav>
+  <div>
+    <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-1.jpeg" alt="First Image">
+  </div>
+  <div>
+    <div>
+      <h2>MOST POPULAR RECIPES</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+      <button>VIEW RECIPES</button>
+    </div>
+    <div>
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-2.jpeg" alt="">
+    </div>
+    <div><img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-3.jpeg" alt=""></div>
+    <div>
+      <div>
+        <i class="fa-solid fa-lemon"></i>
+        <h2>VEGETARIAN</h2>
+      </div>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+    </div>
+    <div>
+      <i class="fa-solid fa-utensils"></i>
+      <h2>APPETIZERS</h2>
+    </div>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+  </div>
+  <div>
+    <div>
+      <i class="fa-solid fa-mug-saucer"></i>
+      <h2>DESSERTS</h2>
+    </div>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+  </div>
+  <div>
+    <div>
+      <i class="fa-solid fa-martini-glass"></i>
+      <h2>DRINKS</h2>
+    </div>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+  </div>
+  <div>
+    <i class="fa-solid fa-leaf"></i>
+    <h2>SALADS</h2>
+  </div>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+    ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+    distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+    vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+  </div>
+  <div>
+    <i class="fa-solid fa-spoon"></i>
+    <h2>SIDE DISHES</h2>
+  </div>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+    ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+    distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+    vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+  </div>
+  </div>
+
+  <div>
+    <div>
+      <div>
+        <div>
+          <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-4.jpeg" alt="">
+        </div>
+        <div>
+          <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-circle-text" alt="">
+        </div>
+      </div>
+      <div>
+        <h1>OUR RESTURANT</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero perferendis culpa consequatur nesciunt quia aliquam asperiores id qui illo nostrum suscipit voluptatum ut saepe tempore enim minima explicabo sunt excepturi, sit illum iure. Temporibus perferendis, et, ipsum, id ab quasi rem sunt beatae modi quibusdam fuga vitae debitis ullam similique?</p>
+      </div>
+    </div>
+  </div>
+
+  <div>
+    <div>
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-5.jpeg" alt="">
+    </div>
+    <div>
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-6.jpeg" alt="">
+    </div>
+    <div>
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-7.jpeg" alt="">
+    </div>
+    <div>
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-8.jpeg" alt="">
+    </div>
+    <div>
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-9.jpeg" alt="">
+    </div>
+    <div>
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-10.jpeg" alt="">
+    </div>
+  </div>
+
+  <div>
+    <div>
+      <h2>HUNGRY CLIENTS</h2>
+    </div>
+    <div>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro non ut adipisci rerum sunt, expedita suscipit itaque accusamus maiores alias qui, quae soluta laboriosam unde nobis veritatis? Magnam aliquid facilis at accusantium! Alias, pariatur maiores explicabo ducimus accusantium esse repellat doloremque incidunt consectetur nihil aperiam, id velit, iusto voluptate nisi?</p>
+    </div>
+  </div>
+
+  <footer>
+    
+  </footer>
 </body>
+
 </html>
