--- a/index.html
+++ b/index.html
@@ -6,135 +6,257 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delicious: Eat Fresh, Eat Local!</title>
+  <link rel="stylesheet" href="styles/styles.css">
+  <!-- This contains every Font Icon in one line, saving code length -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&family=Raleway:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div>
-    <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-1.jpeg" alt="First Image">
+
+<header>
+  <!-- Hero Image with Logo -->
+  <div class="heroImage">
+    <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-1.jpeg" alt="Purple Cocktail Drinks with Rosemary, Blueberries and Limes">
+    <div class="heroText">
+      <h1>DELICIOUS</h1>
+    </div>
   </div>
-  <div>
+  <!-- List Menu -->
+  <nav>
+    <ul class="menuList">
+      <li class="menuListHome" title= "Home" ><a href="./index.html"></a>HOME</li>
+      <li class="menuListAbout" title= "About"><a href="./about.html"></a>ABOUT</li>
+      <li class="menuListRecipes" title= "Recipes"><a href="./recipes.html"></a>RECIPES</li>
+      <li class="menuListNutrition" title= "Nutrition"><a href="./nutrition.html"></a>NUTRITION</li>
+      <li class="menuListBlog" title= "Blog"><a href="./blog.html"></a>BLOG</li>
+      <li class="menuListShop" title= "Shop"><a href="./shop.html"></a>SHOP</li>
+      <li class="menuListContact" title= "Contact"><a href="./contact.html"></a>CONTACT</li>
+      <li class="menuListCart" title= "Add to Cart"><i class="fa-li fa-solid fa-bag-shopping" aria-hidden="true"></i></li>
+      <li class="menuListSearch" title= "Search"><i class="fa-li fa-solid fa-magnifying-glass" aria-hidden="true"></i></li>
+    </ul>
+  </nav>
+  <!-- Hamburger Drop Down For Mobile Users. -->
+</header>
+
+<!-- Main Section -->
+<main>
+  <figcaption>
     <div>
+      <!-- Most Popular Recipes -->
       <h2>MOST POPULAR RECIPES</h2>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
       <button>VIEW RECIPES</button>
     </div>
+
+    <!-- Top Right Image -->
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-2.jpeg" alt="">
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-2.jpeg" alt="Purple Cabbage in a Bowl">
     </div>
-    <div><img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-3.jpeg" alt=""></div>
+
+    <!-- Bottom Left Image -->
+    <div>
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-3.jpeg" alt="Soft Taco with Steak and Cucumber">
+    </div>
+
+    <!-- Bottom Right Icons -->
     <div>
       <div>
         <i class="fa-solid fa-lemon"></i>
         <h2>VEGETARIAN</h2>
       </div>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
     </div>
     <div>
       <i class="fa-solid fa-utensils"></i>
       <h2>APPETIZERS</h2>
     </div>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-  </div>
-  <div>
-    <div>
-      <i class="fa-solid fa-mug-saucer"></i>
-      <h2>DESSERTS</h2>
-    </div>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-  </div>
-  <div>
-    <div>
-      <i class="fa-solid fa-martini-glass"></i>
-      <h2>DRINKS</h2>
-    </div>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-  </div>
-  <div>
-    <i class="fa-solid fa-leaf"></i>
-    <h2>SALADS</h2>
-  </div>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
     ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
     distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
     vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-  </div>
-  <div>
-    <i class="fa-solid fa-spoon"></i>
-    <h2>SIDE DISHES</h2>
-  </div>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-    ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-    distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-    vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-  </div>
-  </div>
+    </div>
+    <div>
+      <div>
+        <i class="fa-solid fa-mug-saucer"></i>
+        <h2>DESSERTS</h2>
+      </div>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+    </div>
+    <div>
+      <div>
+        <i class="fa-solid fa-martini-glass"></i>
+        <h2>DRINKS</h2>
+      </div>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+    </div>
+    <div>
+      <div>
+        <i class="fa-solid fa-leaf"></i>
+        <h2>SALADS</h2>
+      </div>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+    </div>
+    <div>
+      <div>
+        <i class="fa-solid fa-spoon"></i>
+        <h2>SIDE DISHES</h2>
+      </div>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+    </div>
+  </figcaption>
 
-  <div>
+  <figcaption>
     <div>
       <div>
         <div>
-          <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-4.jpeg" alt="">
+          <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-4.jpeg" alt="Table and Chairs in a Restaurant Design">
         </div>
         <div>
-          <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-circle-text" alt="">
+          <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-circle-text" alt="Reward Logo">
         </div>
       </div>
       <div>
-        <h1>OUR RESTURANT</h1>
+        <h2>OUR RESTURANTS</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero perferendis culpa consequatur nesciunt quia aliquam asperiores id qui illo nostrum suscipit voluptatum ut saepe tempore enim minima explicabo sunt excepturi, sit illum iure. Temporibus perferendis, et, ipsum, id ab quasi rem sunt beatae modi quibusdam fuga vitae debitis ullam similique?</p>
       </div>
     </div>
-  </div>
+  </figcaption>
 
-  <div>
+  <!-- 6 Pictures section. Flex boxed and wraps twice (1 column for mobile users) -->
+  <figure>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-5.jpeg" alt="">
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-5.jpeg" alt="Salad with Nuts and Pesto">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-6.jpeg" alt="">
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-6.jpeg" alt="Battered Chicken Burger with Mixed Lettuce">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-7.jpeg" alt="">
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-7.jpeg" alt="Shallots Surrounded by Grass">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-8.jpeg" alt="">
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-8.jpeg" alt="Mixed Flowers on a Hardened Sand Castle">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-9.jpeg" alt="">
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-9.jpeg" alt="Raisin Cookies with Blueberries and Flowers">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-10.jpeg" alt="">
+      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-10.jpeg" alt="Raita on a White Table">
     </div>
-  </div>
+  </figure>
 
-  <div>
+  <article class="hungryClients">
     <div>
       <h2>HUNGRY CLIENTS</h2>
     </div>
+    <hr>
+    <i class="fa fa-solid fa-quote-left fa-3x fa-pull-left" aria-hidden="true"></i>
+    <i class="fa fa-solid fa-quote-right fa-3x fa-pull-right" aria-hidden="true"></i>
     <div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro non ut adipisci rerum sunt, expedita suscipit itaque accusamus maiores alias qui, quae soluta laboriosam unde nobis veritatis? Magnam aliquid facilis at accusantium! Alias, pariatur maiores explicabo ducimus accusantium esse repellat doloremque incidunt consectetur nihil aperiam, id velit, iusto voluptate nisi?</p>
+      <!-- This code works. Use for HUNGRY CLIENTS section. -->
+      <div>
+        <p class="quotes"><p><i>My hubby and I are having our 3 year anniversary and decided to eat at Delicious. It was the greatest decision we ever made! The location was exotic, the food was amazing and the drinks were so refreshing! 10/10 definitely coming back! :)</i></p>
+      </div>
+      <i class="fa-solid fa-chevron-left"></i>
+      <i class="fa-solid fa-chevron-right"></i>
+  </article>
+  <!-- End of Main Section -->
+</main>
+
+<!-- Footer Section -->
+<footer class="footer">
+  <div class="footerFlex">
+    <div>
+      <h2>DELICIOUS</h2>
+      <ul>
+        <li>
+          <p>Soko Radicchio bunya nuts gram dulse</p>
+          <p>silver beet parsnip napa cabbage lotus</p>
+          <p>root sea lettuce brussels sprout cabbage.</p>
+        </li>
+        <hr>
+        <li>
+          <p>A delicious restaurant</p>
+          <p>Toronto, Ontario</p>
+        </li>
+        <hr>
+        <li><p>yum@food.com</p></li>
+        <hr>
+        <li><p>+1 234 657 8910</p></li>
+      </ul>
+    </div>
+    <div>
+      <h3>RECENT POSTS</h3>
+      <ul>
+        <li>
+          <p>Beetroot water spinach okra water</p>
+        </li>
+        <hr>
+        <li>
+          <p>Chestnut ricebean pea catsear courgette</p>
+        </li>
+        <hr>
+        <li>
+          <p>Summer purslane spinach arugula pea</p>
+        </li>
+        <hr>
+        <li>
+          <p>Tatsoi aubergine spring onion bush</p>
+        </li>
+        <hr>
+        <li>
+          <p>Tomato kale radicchio turnip chicory</p>
+        </li>
+        <hr>
+        <li>
+          <p>Salsify pea sprouts fava bean</p>
+        </li>
+      </ul>
+    </div>
+    <div>
+      <!-- How do I make this h3 be level with the rest of the titles? Please fix? -->
+      <h3>SUBSCRIBE NOW</h3>
+        <p>Get all of our newest recipes immediately</p>
+        <p>in your inbox!</p>
+      <form action="">
+        <input type="text" id="email" placeholder="Enter your email" aria-label="Enter your email" required>
+        <button><i class="fa-solid fa-right-long"></i></button>
+      <hr>
+      <div>
+        <ul class="fa-ul">
+          <li><i class="fa-li fa-brands fa-facebook-f fa-2xs" aria-hidden="true"></i></li>
+          <li><i class="fa-li fa-brands fa-twitter fa-2xs" aria-hidden="true"></i></li>
+          <li><i class="fa-li fa-brands fa-instagram fa-2xs" aria-hidden="true"></i></i></li>
+        </ul>
+      </div>
     </div>
   </div>
 
-  <footer>
-    
-  </footer>
-</body>
+  <div class="copyright">
+    <p>Copyrights © 2015 by <span class="copyrightGreen">POLAR</span>. All Rights Reserved.</p>
+  </div>
+</footer>
 
+</body>
 </html>
+
