--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@
 <body>
 
 <header>
-  <!-- Hero Image with Logo -->
-  <div class="heroImage">
-    <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-1.jpeg" alt="Purple Cocktail Drinks with Rosemary, Blueberries and Limes">
-    <div class="heroText">
-      <h1>DELICIOUS</h1>
+  <div class="heroImageContainer">
+    <div class="wrapper">
+      <!-- List Menu -->
+      <nav class="headerNav"><!-- Hero Image with Logo -->
+        <h1 class="heroText">DELICIOUS</h1>
+        <!-- text transform -->
+        <ul class="menuList">
+          <li class="menuListHome menuListItem" title= "Home" ><a href="./index.html"></a>HOME</li>
+          <li class="menuListAbout menuListItem" title= "About"><a href="./about.html"></a>ABOUT</li>
+          <li class="menuListRecipes menuListItem" title= "Recipes"><a href="./recipes.html"></a>RECIPES</li>
+          <li class="menuListNutrition menuListItem" title= "Nutrition"><a href="./nutrition.html"></a>NUTRITION</li>
+          <li class="menuListBlog menuListItem" title= "Blog"><a href="./blog.html"></a>BLOG</li>
+          <li class="menuListShop menuListItem" title= "Shop"><a href="./shop.html"></a>SHOP</li>
+          <li class="menuListContact menuListItem" title= "Contact"><a href="./contact.html"></a>CONTACT</li>
+          <li class="menuListCart menuListItem menuListIcon" title= "Add to Cart"><i class="fa-solid fa-bag-shopping" aria-hidden="true"></i></li>
+          <li class="menuListSearch menuListItem menuListIcon" title= "Search"><i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i></li>
+        </ul>
+      </nav>
+      <!-- Hamburger Drop Down For Mobile Users. -->
     </div>
   </div>
-  <!-- List Menu -->
-  <nav>
-    <ul class="menuList">
-      <li class="menuListHome" title= "Home" ><a href="./index.html"></a>HOME</li>
-      <li class="menuListAbout" title= "About"><a href="./about.html"></a>ABOUT</li>
-      <li class="menuListRecipes" title= "Recipes"><a href="./recipes.html"></a>RECIPES</li>
-      <li class="menuListNutrition" title= "Nutrition"><a href="./nutrition.html"></a>NUTRITION</li>
-      <li class="menuListBlog" title= "Blog"><a href="./blog.html"></a>BLOG</li>
-      <li class="menuListShop" title= "Shop"><a href="./shop.html"></a>SHOP</li>
-      <li class="menuListContact" title= "Contact"><a href="./contact.html"></a>CONTACT</li>
-      <li class="menuListCart" title= "Add to Cart"><i class="fa-li fa-solid fa-bag-shopping" aria-hidden="true"></i></li>
-      <li class="menuListSearch" title= "Search"><i class="fa-li fa-solid fa-magnifying-glass" aria-hidden="true"></i></li>
-    </ul>
-  </nav>
-  <!-- Hamburger Drop Down For Mobile Users. -->
+<!-- End of wrapper/header -->
 </header>
 
 <!-- Main Section -->
 <main>
-  <figcaption>
-    <div>
+  <figcaption class="flexBoxRecipes">
+    <div class="mostPopularRecipes">
       <!-- Most Popular Recipes -->
       <h2>MOST POPULAR RECIPES</h2>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
@@ -55,89 +55,81 @@
     </div>
 
     <!-- Top Right Image -->
-    <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-2.jpeg" alt="Purple Cabbage in a Bowl">
+    <div class="home-2">
+      <img src="./assets/home-2.jpeg" alt="Purple Cabbage in a Bowl">
     </div>
 
     <!-- Bottom Left Image -->
-    <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-3.jpeg" alt="Soft Taco with Steak and Cucumber">
+    <div class="home-3">
+      <img src="./assets/home-3.jpeg" alt="Soft Taco with Steak and Cucumber">
     </div>
 
-    <!-- Bottom Right Icons -->
-    <div>
+    <div class="recipeList">
+      <!-- Bottom Right Icons -->
       <div>
         <i class="fa-solid fa-lemon"></i>
         <h2>VEGETARIAN</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
       </div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-    </div>
-    <div>
-      <i class="fa-solid fa-utensils"></i>
-      <h2>APPETIZERS</h2>
-    </div>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-    ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-    distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-    vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-    </div>
-    <div>
+      <div>
+        <i class="fa-solid fa-utensils"></i>
+        <h2>APPETIZERS</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
+      </div>
       <div>
         <i class="fa-solid fa-mug-saucer"></i>
         <h2>DESSERTS</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
       </div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-    </div>
-    <div>
       <div>
         <i class="fa-solid fa-martini-glass"></i>
         <h2>DRINKS</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
       </div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-    </div>
-    <div>
       <div>
         <i class="fa-solid fa-leaf"></i>
         <h2>SALADS</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
       </div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
-    </div>
-    <div>
       <div>
         <i class="fa-solid fa-spoon"></i>
         <h2>SIDE DISHES</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
+        ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
+        distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
+        vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
       </div>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
-      ratione! Facere pariatur praesentium totam adipisci autem, fuga laborum quos, natus voluptas rem, porro
-      distinctio. Reprehenderit corrupti possimus illo aperiam, inventore accusantium repudiandae nulla nesciunt natus
-      vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
     </div>
   </figcaption>
 
-  <figcaption>
-    <div>
+  <figcaption class="ourRestaurants">
+    <div class="restaurantsWrapper">
       <div>
         <div>
-          <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-4.jpeg" alt="Table and Chairs in a Restaurant Design">
+          <img src="./assets/home-4.jpeg" alt="Table and Chairs in a Restaurant Design">
         </div>
         <div>
-          <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-circle-text" alt="Reward Logo">
+          <img src="./assets/home-circle-text.png" alt="Reward Logo">
         </div>
       </div>
       <div>
         <h2>OUR RESTURANTS</h2>
+        <div class="line"></div>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero perferendis culpa consequatur nesciunt quia aliquam asperiores id qui illo nostrum suscipit voluptatum ut saepe tempore enim minima explicabo sunt excepturi, sit illum iure. Temporibus perferendis, et, ipsum, id ab quasi rem sunt beatae modi quibusdam fuga vitae debitis ullam similique?</p>
       </div>
     </div>
@@ -146,39 +138,44 @@
   <!-- 6 Pictures section. Flex boxed and wraps twice (1 column for mobile users) -->
   <figure>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-5.jpeg" alt="Salad with Nuts and Pesto">
+      <img src="./assets/home-5.jpeg" alt="Salad with Nuts and Pesto">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-6.jpeg" alt="Battered Chicken Burger with Mixed Lettuce">
+      <img src="./assets/home-6.jpeg" alt="Battered Chicken Burger with Mixed Lettuce">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-7.jpeg" alt="Shallots Surrounded by Grass">
+      <img src="./assets/home-7.jpeg" alt="Shallots Surrounded by Grass">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-8.jpeg" alt="Mixed Flowers on a Hardened Sand Castle">
+      <img src="./assets/home-8.jpeg" alt="Mixed Flowers on a Hardened Sand Castle">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-9.jpeg" alt="Raisin Cookies with Blueberries and Flowers">
+      <img src="./assets/home-9.jpeg" alt="Raisin Cookies with Blueberries and Kansas Peony Flowers">
     </div>
     <div>
-      <img src="C:\Users\owner\Documents\websites\juno\week3\project1\project-1\assets\home-10.jpeg" alt="Raita on a White Table">
+      <img src="./assets/home-10.jpeg" alt="Raita on a White Table">
     </div>
   </figure>
 
   <article class="hungryClients">
-    <div>
-      <h2>HUNGRY CLIENTS</h2>
-    </div>
-    <hr>
-    <i class="fa fa-solid fa-quote-left fa-3x fa-pull-left" aria-hidden="true"></i>
-    <i class="fa fa-solid fa-quote-right fa-3x fa-pull-right" aria-hidden="true"></i>
-    <div>
-      <!-- This code works. Use for HUNGRY CLIENTS section. -->
+    <div class="hungryClientsContent">
       <div>
-        <p class="quotes"><p><i>My hubby and I are having our 3 year anniversary and decided to eat at Delicious. It was the greatest decision we ever made! The location was exotic, the food was amazing and the drinks were so refreshing! 10/10 definitely coming back! :)</i></p>
+        <h2>HUNGRY CLIENTS</h2>
       </div>
-      <i class="fa-solid fa-chevron-left"></i>
-      <i class="fa-solid fa-chevron-right"></i>
+      <hr>
+      <!-- This code works. Use for HUNGRY CLIENTS section. -->
+      <div class="quoteBox">
+        <div>
+          <p class="quotes">My hubby and I are having our 3 year anniversary and decided to eat at Delicious. It was the greatest decision we ever made! The location was exotic, the food was amazing and the drinks were so refreshing! 10/10 definitely coming back! :)</p>
+          <i class="fa fa-solid fa-quote-left fa-3x fa-pull-left" aria-hidden="true"></i>
+          <i class="fa fa-solid fa-quote-right fa-3x fa-pull-right" aria-hidden="true"></i>
+        </div>
+      </div>
+      <div>
+        <i class="fa-solid fa-chevron-left"></i>
+        <i class="fa-solid fa-chevron-right"></i>
+      </div>
+    </div>
   </article>
   <!-- End of Main Section -->
 </main>
@@ -194,14 +191,11 @@
           <p>silver beet parsnip napa cabbage lotus</p>
           <p>root sea lettuce brussels sprout cabbage.</p>
         </li>
-        <hr>
         <li>
           <p>A delicious restaurant</p>
           <p>Toronto, Ontario</p>
         </li>
-        <hr>
         <li><p>yum@food.com</p></li>
-        <hr>
         <li><p>+1 234 657 8910</p></li>
       </ul>
     </div>
@@ -211,23 +205,18 @@
         <li>
           <p>Beetroot water spinach okra water</p>
         </li>
-        <hr>
         <li>
           <p>Chestnut ricebean pea catsear courgette</p>
         </li>
-        <hr>
         <li>
           <p>Summer purslane spinach arugula pea</p>
         </li>
-        <hr>
         <li>
           <p>Tatsoi aubergine spring onion bush</p>
         </li>
-        <hr>
         <li>
           <p>Tomato kale radicchio turnip chicory</p>
         </li>
-        <hr>
         <li>
           <p>Salsify pea sprouts fava bean</p>
         </li>
@@ -238,15 +227,19 @@
       <h3>SUBSCRIBE NOW</h3>
         <p>Get all of our newest recipes immediately</p>
         <p>in your inbox!</p>
-      <form action="">
-        <input type="text" id="email" placeholder="Enter your email" aria-label="Enter your email" required>
-        <button><i class="fa-solid fa-right-long"></i></button>
-      <hr>
+      <form action="submit">
+        <input type="email" id="email" placeholder="Enter your email" aria-label="Enter your email" required>
+        <button class="button"><i class="fa-solid fa-right-long"></i></button>
+        <ul>
+          <li class="emailText">
+            <p>&nbsp;</p>
+          </li>
+        </ul>
       <div>
-        <ul class="fa-ul">
-          <li><i class="fa-li fa-brands fa-facebook-f fa-2xs" aria-hidden="true"></i></li>
-          <li><i class="fa-li fa-brands fa-twitter fa-2xs" aria-hidden="true"></i></li>
-          <li><i class="fa-li fa-brands fa-instagram fa-2xs" aria-hidden="true"></i></i></li>
+        <ul class="fa-ul" style="margin-left: 20px;">
+          <li><i class="fa-li fa-brands fa-facebook-f fa-s" aria-hidden="true"></i></li>
+          <li><i class="fa-li fa-brands fa-twitter fa-s" aria-hidden="true"></i></li>
+          <li><i class="fa-li fa-brands fa-instagram fa-s" aria-hidden="true"></i></i></li>
         </ul>
       </div>
     </div>
