Flexboxed some of the Main section

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 <!-- Main Section -->
 <main>
-  <figcaption class="flexBoxRecipes">
-    <div class="mostPopularRecipes">
+  <div class="flexBoxRecipes">
+    <div class="mostPopularRecipes recipeItem">
       <!-- Most Popular Recipes -->
       <h2>MOST POPULAR RECIPES</h2>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam dolorem explicabo, aspernatur neque ipsam
@@ -55,16 +55,16 @@
     </div>
 
     <!-- Top Right Image -->
-    <div class="home-2">
+    <div class="home-2 recipeItem">
       <img src="./assets/home-2.jpeg" alt="Purple Cabbage in a Bowl">
     </div>
 
     <!-- Bottom Left Image -->
-    <div class="home-3">
+    <div class="home-3 recipeItem">
       <img src="./assets/home-3.jpeg" alt="Soft Taco with Steak and Cucumber">
     </div>
 
-    <div class="recipeList">
+    <div class="recipeList recipeItem">
       <!-- Bottom Right Icons -->
       <div>
         <i class="fa-solid fa-lemon"></i>
@@ -115,7 +115,7 @@
         vero, facere tempore! Delectus, natus! Sequi veritatis necessitatibus officiis ex!</p>
       </div>
     </div>
-  </figcaption>
+  </div>
 
   <figcaption class="ourRestaurants">
     <div class="restaurantsWrapper">
