--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
   </div>
 
-  <figcaption class="ourRestaurants">
+  <div class="ourRestaurants">
     <div class="restaurantsWrapper">
       <div>
         <div>
@@ -133,7 +133,7 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero perferendis culpa consequatur nesciunt quia aliquam asperiores id qui illo nostrum suscipit voluptatum ut saepe tempore enim minima explicabo sunt excepturi, sit illum iure. Temporibus perferendis, et, ipsum, id ab quasi rem sunt beatae modi quibusdam fuga vitae debitis ullam similique?</p>
       </div>
     </div>
-  </figcaption>
+  </div>
 
   <!-- 6 Pictures section. Flex boxed and wraps twice (1 column for mobile users) -->
   <figure>
